feat(hooks): add useUniqueKey hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -102,5 +102,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*", "__tests__/validator/index.test.ts"]
+  "include": ["src/**/*", "__tests__/validator/index.spec.ts"]
 }
