--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
     "@types/jest": "^27.5.1",
+    "@types/react": "^18.0.14",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.16.0",
@@ -32,5 +33,8 @@
     "prettier": "2.6.2",
     "ts-jest": "^28.0.3",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "react": "^18.2.0"
   }
 }
