--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
     "@types/jest": "^27.5.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.14",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
@@ -35,6 +36,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0"
   }
 }
