--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^27.5.1",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.14",
