--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^13.3.0",
     "@types/jest": "^27.5.1",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.14",
@@ -31,8 +31,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^12.4.2",
     "prettier": "2.6.2",
+    "react-dom": "^18.2.0",
     "ts-jest": "^28.0.3",
     "typescript": "^4.7.2"
   },
