--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^12.4.2",
+    "lodash": "^4.17.21",
     "prettier": "2.6.2",
     "react-dom": "^18.2.0",
     "ts-jest": "^28.0.3",
