--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "es6",
-    "rootDir": "./",
+    "target": "ES2020",
     "moduleResolution": "node",
+    "jsx": "react",
+    "rootDir": "src",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
     "resolveJsonModule": true,
     "allowJs": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "./dist",
     "removeComments": true,
     "esModuleInterop": true,
@@ -19,5 +19,6 @@
     "skipLibCheck": true,
     "declaration": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "lib", "es", "dist", "**/__tests__/**/*"]
 }
