--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "utils",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs.js",
+      "import": "./dist/index.esm.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build": "rollup --config"
   },
   "repository": {
     "type": "git",
@@ -36,6 +46,10 @@
     "lodash": "^4.17.21",
     "prettier": "2.6.2",
     "react-dom": "^18.2.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "rollup": "^2.78.0",
     "ts-jest": "^28.0.3",
     "typescript": "^4.7.2"
   },
