--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "**/*.{js,jsx,ts,tsx,less,md,json}": ["eslint --cache", "prettier --check"]
+  "**/*.{js,jsx,ts,tsx,less,json}": ["eslint --cache", "prettier --check"]
 }
