--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "declaration": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "lib", "es", "dist", "**/__tests__/**/*"]
+  "exclude": ["node_modules", "dist", "**/__tests__/**/*"]
 }
