--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utils",
+  "name": "@nmsn/utils",
   "version": "0.0.1",
   "description": "",
   "main": "./dist/index.cjs.js",
@@ -30,6 +30,9 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^27.5.1",
     "@types/lodash-es": "^4.17.6",
@@ -46,9 +49,6 @@
     "lodash": "^4.17.21",
     "prettier": "2.6.2",
     "react-dom": "^18.2.0",
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.3",
     "rollup": "^2.78.0",
     "ts-jest": "^28.0.3",
     "typescript": "^4.7.2"
@@ -57,5 +57,8 @@
     "lodash-es": "^4.17.21",
     "react": "^18.2.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ]
 }
