--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@nmsn/utils",
   "version": "0.0.1",
-  "description": "",
+  "description": "A daily utils function collection.",
+  "keywords": [
+    "tool function",
+    "format",
+    "regex",
+    "types",
+    "validator",
+    "react hooks"
+  ],
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.mjs",
   "types": "./dist/index.d.ts",
