feat(jest): 增加 commit 修改文件自动化测试

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,4 @@
 {
-  "**/*.{js,jsx,ts,tsx,less,json}": ["eslint --cache", "prettier --check"]
+  "**/*.{js,jsx,ts,tsx,less,json}": ["eslint --cache", "prettier --check"],
+  "**/*.{js,jsx,ts,tsx}": ["jest --bail --findRelatedTests"]
 }
