--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "lodash-es": "^4.17.21",
     "react": "^18.2.0"
   },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
   "sideEffects": false,
   "files": [
     "dist"
