--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nmsn/utils.git"
+    "url": "https://github.com/nmsn/utils.git"
   },
   "author": "nmsn",
   "license": "MIT",
