--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "moduleResolution": "node",
     "jsx": "react",
-    "rootDir": "src",
+    // "rootDir": "src",
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
@@ -19,6 +19,6 @@
     "skipLibCheck": true,
     "declaration": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", ".dumi/**/*"],
   "exclude": ["node_modules", "dist", "**/__tests__/**/*"]
 }
