feat: 更改 linststated 配置，没有匹配到测试用例可以通过

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
   "src/**/*.{js,jsx,ts,tsx,less,json}": ["eslint --cache", "prettier --check"],
-  "src/**/*.{js,jsx,ts,tsx}": ["jest --bail --findRelatedTests"]
+  "src/**/*.{js,jsx,ts,tsx}": ["jest --bail --findRelatedTests --passWithNoTests"]
 }
