--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ node_modules/
 dist/
 coverage/
 
-.dumi/tmp
-.dumi/tmp-test
-.dumi/tmp-production
+.dumi/tmp/
+.dumi/tmp-test/
+.dumi/tmp-production/
