--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     }
   },
   "scripts": {
+    "lint": "eslint --fix --ext .ts,.tsx .",
     "test": "jest",
     "prepare": "husky install",
     "build": "rollup --config",
