--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react": "^18.0.14",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "antd": "^5.2.1",
     "dumi": "^2.1.3",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
