--- a/package.json
+++ b/package.json
@@ -60,16 +60,15 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^12.5.0",
-    "lodash": "^4.17.21",
     "prettier": "2.6.2",
-    "react-dom": "^18.2.0",
     "rollup": "^2.79.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "lodash-es": "^4.17.21",
-    "react": "^18.2.0"
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
