--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^12.5.0",
+    "lodash": "^4.17.21",
     "prettier": "2.6.2",
     "rollup": "^2.79.1",
+    "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^28.0.8",
