--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prepare": "husky install",
     "build": "rollup --config",
     "dumi:dev": "dumi dev",
-    "dumi:build": "dumi build"
+    "dumi:build": "dumi build",
+    "release": "npm run build && rltb"
   },
   "repository": {
     "type": "git",
@@ -62,6 +63,7 @@
     "lint-staged": "^12.5.0",
     "lodash": "^4.17.21",
     "prettier": "2.6.2",
+    "release-toolbox": "^0.1.0",
     "rollup": "^2.79.1",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
