--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rollup": "^2.79.1",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.9.5"
