--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: 16.x
 
     - name: "Install"
-      run: npx pnpm i
+      run: npm install
 
     - name: "Run test"
       run: npm run test
