--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,10 +16,10 @@ jobs:
         node-version: 16.x
 
     - name: "Install"
-      run: npm ci
+      run: npx pnpm i
 
     - name: "Run test"
-      run: npm test
+      run: pnpm test
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
