test: update codecov

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -4,22 +4,23 @@ on:
   push:
    branches:
     - main
+    - codecov
 
 jobs:
   bots:
     runs-on: ubuntu-latest
     steps:
 
+    - name: "Checkout code"
+      uses: actions/checkout@v3
+
     - name: "Set node"
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
 
-    - name: "Install"
-      run: npx pnpm i
-
     - name: "Run test"
-      run: pnpm test
+      run: npm test
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
