--- a/package.json
+++ b/package.json
@@ -76,11 +76,11 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "lodash-es": "^4.17.21",
-    "react": "^18.2.0"
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-router-dom": "^6.9.0"
   },
   "sideEffects": false,
   "files": [
