--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@commitlint/config-conventional": "^17.6.5",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
     "@types/lodash-es": "^4.17.7",
